--- a/CsharpKioskDemoDotnet.csproj
+++ b/CsharpKioskDemoDotnet.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="BitPay" Version="4.4.2203" />
+        <PackageReference Include="Lib.AspNetCore.ServerSentEvents" Version="8.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
