--- a/CsharpKioskDemoDotnet/CsharpKioskDemoDotnet.csproj
+++ b/CsharpKioskDemoDotnet/CsharpKioskDemoDotnet.csproj
@@ -25,5 +25,11 @@
 
     <ItemGroup>
         <Folder Include="Migrations" />
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>CsharpKioskDemoDotnet.Tests</_Parameter1>
+        </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 </Project>
