--- a/CsharpKioskDemoDotnet/appsettings.json
+++ b/CsharpKioskDemoDotnet/appsettings.json
@@ -10,10 +10,8 @@
     "MvcInvoiceContext": "Data Source=MvcInvoiceContext-cc88b4b8-7087-4634-b652-cab78591fabb.db"
   },
   "BitPay": {
-    "NotificationEmail": "example@example.com"
-  },
-  "AppUrl": "https://localhost:8080",
-  "BitPayConfiguration": {
+    "NotificationEmail": "example@example.com",
     "Token": ""
-  }
+  },
+  "AppUrl": "https://localhost:8080"
 }
