--- a/CsharpKioskDemoDotnet/bitPayDesign.yaml
+++ b/CsharpKioskDemoDotnet/bitPayDesign.yaml
@@ -1,8 +1,8 @@
 hero:
-  bgColor: "#100000"
-  title: "BitPay Demo ts"
-  body: "Mattis amet hendrerit dolor, quisque lorem pharetra. Pellentesque lacus nisi urna, arcu sociis eu. Orci vel lectus nisl eget eget ut consectetur. Sit justo viverra non adipisicing elit distinctio."
-logo: "https://via.placeholder.com/300x75?text=LOGO"
+  bgColor: "#2a3f90"
+  title: "BitPay Demo Store"
+  body: "Please fill out the fields below to request an invoice."
+logo: "https://bitpay.com/_nuxt/img/bitpay-logo-blue.1c0494b.svg"
 posData:
   fields:
     - type: "select"
