--- a/CsharpKioskDemoDotnet.IntegrationTests/Src/Donation/Infastructure/Ui/bitPayDesign.yaml
+++ b/CsharpKioskDemoDotnet.IntegrationTests/Src/Donation/Infastructure/Ui/bitPayDesign.yaml
@@ -1,9 +1,9 @@
-mode: "standard"
+mode: "donation"
 hero:
-  bgColor: "#2a3f90"
-  title: "BitPay Demo Store"
-  body: "Please fill out the fields below to request an invoice."
-logo: "https://bitpay.com/_nuxt/img/bitpay-logo-blue.1c0494b.svg"
+  bgColor: "#100000"
+  title: "BitPay Demo ts"
+  body: "Mattis amet hendrerit dolor, quisque lorem pharetra. Pellentesque lacus nisi urna, arcu sociis eu. Orci vel lectus nisl eget eget ut consectetur. Sit justo viverra non adipisicing elit distinctio."
+logo: "https://via.placeholder.com/300x75?text=LOGO"
 posData:
   fields:
     - type: "select"
@@ -51,4 +51,3 @@ donation:
   footerText: "Contributions or gifts to RECIPIENT are not tax deductible. Contributions are limited to $10,000 per PAC per election cycle ($5,000 primary and $5,000 general) and $5,600 per individual per election cycle ($2,800 primary and $2,800 general). Contributions from the general treasury funds of corporations, labor unions, and national banks are prohibited. Federal contractors and foreign nationals who are not admitted for permanent residence in the United States are prohibited from making contributions. All contributions must be from personal funds and may not be reimbursed or paid by any other person. Federal law requires us to use our best efforts to collect and report the name, mailing address, occupation, and name of employer of individuals whose contributions exceed $200 in an election cycle."
   buttonSelectedBgColor: "#2a3f90"
   buttonSelectedTextColor: "#ffffff"
-
