--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,12 @@ jobs:
 
     strategy:
       matrix:
-        dotnet-version: [ '7.0.x' ]
-    
+        dotnet-version: ['7.x']
+
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
         uses: actions/setup-dotnet@v3
         with:
@@ -27,5 +29,7 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build --no-restore
-      - name: Test
-        run: dotnet test --no-restore --verbosity n
+      - name: Unit test
+        run: dotnet test CsharpKioskDemoDotnet.Tests --no-restore --verbosity n
+      - name: Integration test
+        run: dotnet test CsharpKioskDemoDotnet.IntegrationTests --verbosity n -f net${{ matrix.dotnet-version }}
