SP-692 C# Demo - Docker Compose

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,5 @@ jobs:
         run: dotnet build --no-restore
       - name: Unit test
         run: dotnet test CsharpKioskDemoDotnet.Tests --no-restore --verbosity n
+      - name: Integration test
+        run: dotnet test CsharpKioskDemoDotnet.IntegrationTests --verbosity n
